--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </li>
           <li class="nav-item">
           <div class="btn btn-primary">
-              <a href="img/Olosunde Kehinde Ademola C.V.pdf" download="olosunde-Kehinde-Ademola-CV.pdf" target="_blank">
+              <a href="img/Olosunde Kehinde Ademola CV.pdf" download="olosunde-Kehinde-Ademola-CV.pdf" target="_blank">
                 <i class="fa fa-download"></i> Download CV
             </a>
           
