--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </li>
           <li class="nav-item">
           <div class="btn btn-primary">
-              <a href="img/Olosunde Kehinde Ademola CV.pdf" download="olosunde-Kehinde-Ademola-CV.pdf" target="_blank">
+              <a href="img/Olosunde_Kehinde_Ademola_Resume.pdf" download="olosunde-Kehinde-Ademola-CV.pdf" target="_blank">
                 <i class="fa fa-download"></i> Download CV
             </a>
           
@@ -92,7 +92,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>Howtoaddnew
   <!--/ Intro Skew End /-->
 
   <section id="about" class="about-mf sect-pt4 route">
